--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-iframe": "^1.8.5",
     "react-router": "^6.16.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
